deps/crates/vendor/anyhow/tests/ui/no-impl.rs
use anyhow::anyhow;

#[derive(Debug)]
struct Error;

fn main() {
    let _ = anyhow!(Error);
}
